# soitgoes

./: .gitignore  .gitlab-ci.yml  .tern-project  Dockerfile  Dockerfile-nodejs  Procfile  README.md  app.json  bitbucket-pipelines.yml  deploy.sh  docker-compose.yml  fabfile.py  openapi.yaml  requirements.txt  tmux.sh
api/: manage.py  pyproject.toml  requirements.txt  setup.cfg
api/admincalendar/: admincalendar.py  apps.py
api/admincalendar/templatetags/: admincalendar_tags.py
api/crm/: admin.py  filters.py  models.py  permissions.py  serializers.py  test_views.py  urls.py  views.py
api/crm/migrations/: 0001_initial.py  0002_alter_note_id.py
api/financeapp/: admin.py  apiviews.py  csvimport.py  filters.py  models.py  rules.py  serializers.py  tag_types.py  urls.py
api/financeapp/migrations/: 0001_initial.py  0002_alter_bankaccount_uuid.py  0003_alter_banktransaction_date_rule_tag.py  0003_rule_alter_banktransaction_date_tag.py
api/journal/: admin.py  apiviews.py  currency.py  filters.py  invoices.py  models.py  permissions.py  project.py  serializers.py  test_apiviews.py  urls.py
api/journal/migrations/: 0001_squashed_0029_auto_20160724_1545.py  0003_auto_20160731_1558.py  0005_invoice_paid_at.py  0006_invoice_total_paid.py  0007_auto_20160824_1606.py  0010_auto_20160901_0839.py  0013_auto_20160907_1447.py  0014_activity.py  0015_timeslip_created_by.py  0017_activity_status.py  0018_expense.py  0020_invoice_due_date.py  0021_auto_20161030_1320.py  0023_task_tasknote.py  0026_auto_20170114_1316.py  0029_remove_contact_company.py  0032_auto_20181025_0813.py  0035_auto_20190622_1229.py  (+13 more)
api/libs/: invoicepdf.py  vat.py
api/soitgoes/: settings.py  urls.py  views.py  wsgi.py
api/users/: filters.py  models.py  onetimetoken.py  ossso.py  serializers.py  urls.py  views.py
(+683 files in other folders)
