[tool.poetry]
name = "soitgoes"
version = "0.1.0"
description = ""
authors = ["Stuart Quin <stuart.quin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-filter = "^24.3"
gunicorn = "^23.0.0"
pyyaml = "^6.0.2"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"

[tool.ruff]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # Warning
    "YTT", # flake8-2020
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    "PLE", # Error
    "PLW", # Warning
    "RSE", # flake8-raise
    "B", # flake8-bugbear
    "E501" # line length
]
exclude = ["migrations", ".venv"]

[tool.ruff.format]
quote-style = "double"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pyright = "^1.1.350"
isort = "^5.13.2"
django-stubs = "^4.2.7"
ipdb = "^0.13.13"
model-bakery = "^1.17.0"
tach = "^0.19.1"

[tool.pyright]
include = ["."]

[tool.isort]
multi_line_output=3


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
